tests/errors/generic_null_to_nonnull_assignment.dang
# Null flowing through a generic function cannot initialize a non-null field
pub id(x: a): a { x }

pub result: Int! = id(null)
